# bpf-script

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: print-instructions.rs
src/: compiler.rs  error.rs  helpers.rs  lib.rs  optimizer.rs  types.rs
src/compiler/: helpers.rs  mod.rs  script.rs
src/formats/: btf.rs  mod.rs
