[package]
name = "bpf-script"
version = "0.1.0"
edition = "2021"
categories = ["compilers", "data-structures"]
homepage = "https://github.com/arcjustin/bpf-script"
keywords = ["linux", "bpf", "instructions", "bytecode", "ebpf" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arcjustin/bpf-script"
description = "A small scripting language and compiler for creating eBPF programs at runtime."

[dependencies]
anyhow = "1.0.65"
btf = "0.1.0"
bpf-ins = "0.6.0"
peginator = "0.2.0"
peginator_macro = "0.2.0"
