[package]
name = "bpf-script"
version = "0.1.7"
edition = "2021"
categories = ["compilers", "data-structures"]
homepage = "https://github.com/arcjustin/bpf-script"
keywords = ["linux", "bpf", "instructions", "bytecode", "ebpf" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arcjustin/bpf-script"
description = "A small scripting language and compiler for creating eBPF programs at runtime."

[dependencies]
btf = "0.4.0"
bpf-ins = "0.6.1"
peginator = "0.3.0"
peginator_macro = "0.3.0"
thiserror = "1.0.37"
